# aitrafix

./: .gitignore  README.md  pyproject.toml
src/aitrafix/: helpers.py  types.py
src/aitrafix/traffic/: __init__.py
src/aitrafix/vehicle/: __init__.py
src/demo/: main.py
