[project]
name = "aitrafix"
version = "0.0.0"
description = "AItrafix is an AI-powered tool for traffic management and control."
authors = [
    {name = "Abdulazeez Jimoh", email = "abdulazeezojimoh@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.2",
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "sumolib>=1.21.0",
    "traci>=1.21.0",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "torch>=2.5.1",
    "seaborn>=0.13.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true
name = "pytorch"

[tool.mypy]
python_version = "3.11"
plugins = [
    "pydantic.mypy"
]
strict = true
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    ".idea",
    ".devcontainer",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    ".idea",
    ".devcontainer",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"